[gd_scene load_steps=35 format=3 uid="uid://dpphtw80bjntp"]

[ext_resource type="Script" uid="uid://c7ty051x2n8sa" path="res://Scenes/Local Multiplayer/multiplayer.gd" id="1_ymen6"]
[ext_resource type="Script" uid="uid://423pbo3bxe20" path="res://camera_2d.gd" id="2_2by4i"]
[ext_resource type="Texture2D" uid="uid://e01en7w64xac" path="res://Assets/Background/black-370118_1280.png" id="3_50f34"]
[ext_resource type="PackedScene" uid="uid://dem4vu137w1r8" path="res://basketball.tscn" id="4_h7b1f"]
[ext_resource type="PackedScene" uid="uid://b2pvqe64fs4u2" path="res://Assets/Trail/trail.tscn" id="5_5a3mv"]
[ext_resource type="PackedScene" uid="uid://lf67avx156i6" path="res://rim.tscn" id="7_4ljhn"]
[ext_resource type="Script" uid="uid://dpsjedugjpdvt" path="res://Scenes/Local Multiplayer/basketball_2.gd" id="7_hrvcv"]
[ext_resource type="AudioStream" uid="uid://ooiwfbifwwgt" path="res://Assets/Sound Effects/bounce.mp3" id="8_a27ui"]
[ext_resource type="Script" uid="uid://dyuxokih2bsx3" path="res://Assets/Trail/balltrail.gd" id="8_glukk"]
[ext_resource type="AudioStream" uid="uid://jmb52kel7753" path="res://Assets/Sound Effects/Basketball Hits Rim Take 2 (mp3cut.net).mp3" id="9_7ybie"]
[ext_resource type="AudioStream" uid="uid://mymp5wfpyqkh" path="res://Assets/Sound Effects/city-terrace-night-16943.mp3" id="10_qvst4"]
[ext_resource type="AudioStream" uid="uid://dy8rsjo874m7m" path="res://Assets/Sound Effects/soundscrate-basketball-swish-2.mp3" id="11_i45vu"]
[ext_resource type="PackedScene" uid="uid://dtvbpoicwe373" path="res://Assets/green meter.tscn" id="12_oda38"]
[ext_resource type="FontFile" uid="uid://0qrj7clgq3" path="res://Assets/Fonts/Digital7Italic-BW658.ttf" id="13_2cpuc"]
[ext_resource type="Script" uid="uid://brky2wscysrua" path="res://Scoreboard/scoreboard.gd" id="13_kluxp"]
[ext_resource type="PackedScene" uid="uid://bexrplafuq211" path="res://timer.tscn" id="14_bncsk"]
[ext_resource type="Script" uid="uid://dqmgn5aejrcxi" path="res://Scenes/Local Multiplayer/label_2.gd" id="14_kluxp"]
[ext_resource type="FontFile" uid="uid://c41un0xmqs0d3" path="res://Assets/Fonts/JustMyType-KePl.ttf" id="18_efcli"]
[ext_resource type="Script" uid="uid://dujgbww3avh1m" path="res://Scoreboard/score.gd" id="18_glukk"]
[ext_resource type="PackedScene" uid="uid://btkxwms2kbslq" path="res://Scenes/Level Select/lvl_btn.tscn" id="20_att5n"]
[ext_resource type="Script" uid="uid://dkwudegejhl5j" path="res://Scenes/Level Select/back_button.gd" id="21_axnjx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ojgr"]
size = Vector2(1909.88, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7hl0i"]
size = Vector2(1070.44, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fvhs1"]
size = Vector2(1047.94, 13.8749)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_uu6xs"]
bounce = 0.6

[sub_resource type="Shader" id="Shader_hvw6b"]
code = "shader_type canvas_item;

uniform vec4 color : source_color = vec4(1.0);
uniform float width : hint_range(0, 10) = 1.0;
uniform int pattern : hint_range(0, 2) = 0; // diamond, circle, square
uniform bool inside = false;
uniform bool add_margins = true; // only useful when inside is false
uniform vec2 number_of_images = vec2(1.0); // number of horizontal and vertical images in the sprite sheet

varying flat vec4 modulate;

void vertex() {
	modulate = COLOR;
	
	if (add_margins) {
		if ((UV.x <= 0.0 || UV.x >= 1.0) && (UV.y <= 0.0 || UV.y >= 1.0)) {
			VERTEX += (UV * 2.0 - 1.0) * width;
		} else {
			VERTEX += sign(VERTEX) * width; // replace sign(VERTEX) by (sign(VERTEX) * 2.0 - 1.0) if your AnimatedSprite2D isn't Centered
		}
	}
}

bool hasContraryNeighbour(vec2 uv, vec2 texture_pixel_size, vec2 image_top_left, vec2 image_bottom_right, sampler2D texture) {
	for (float i = -ceil(width); i <= ceil(width); i++) {
		float x = abs(i) > width ? width * sign(i) : i;
		float offset;
		
		if (pattern == 0) {
			offset = width - abs(x);
		} else if (pattern == 1) {
			offset = floor(sqrt(pow(width + 0.5, 2) - x * x));
		} else if (pattern == 2) {
			offset = width;
		}
		
		for (float j = -ceil(offset); j <= ceil(offset); j++) {
			float y = abs(j) > offset ? offset * sign(j) : j;
			vec2 xy = uv + texture_pixel_size * vec2(x, y);
			
			if ((xy != clamp(xy, image_top_left, image_bottom_right) || texture(texture, xy).a <= 0.0) == inside) {
				return true;
			}
		}
	}
	
	return false;
}

void fragment() {
	vec2 uv = UV;
	vec2 image_top_left = floor(uv * number_of_images) / number_of_images;
	vec2 image_bottom_right = image_top_left + vec2(1.0) / number_of_images;
	
	if (add_margins) {
		vec2 texture_pixel_size = vec2(1.0) / (vec2(1.0) / TEXTURE_PIXEL_SIZE + vec2(width * 2.0) * number_of_images);
		
		uv = (uv - texture_pixel_size * width - image_top_left) * TEXTURE_PIXEL_SIZE / texture_pixel_size + image_top_left;
		
		if (uv != clamp(uv, image_top_left, image_bottom_right)) {
			COLOR.a = 0.0;
		} else {
			COLOR = texture(TEXTURE, uv) * modulate;
		}
	} else {
		COLOR = texture(TEXTURE, uv) * modulate;
	}
	
	if ((COLOR.a > 0.0) == inside && hasContraryNeighbour(uv, TEXTURE_PIXEL_SIZE, image_top_left, image_bottom_right, TEXTURE)) {
		COLOR.rgb = inside ? mix(COLOR.rgb, color.rgb * modulate.rgb, color.a * modulate.a) : color.rgb * modulate.rgb;
		COLOR.a += (1.0 - COLOR.a) * color.a * modulate.a;
	}
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8nfq6"]
shader = SubResource("Shader_hvw6b")
shader_parameter/color = Color(0.772336, 6.76718e-05, 0.61508, 1)
shader_parameter/width = 7.173
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true
shader_parameter/number_of_images = Vector2(1, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_g73cu"]
load_path = "res://.godot/imported/pixel_basketball_by_fri3ndlygiant_da8zpnz.png-8f6f0477dfe67b443b9ff29eeb6c9e2f.ctex"

[sub_resource type="CircleShape2D" id="CircleShape2D_r0du0"]
radius = 30.0167

[sub_resource type="Curve" id="Curve_8nfq6"]
_data = [Vector2(0, 0.802198), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_g73cu"]
offsets = PackedFloat32Array(0.203883, 0.946667)
colors = PackedColorArray(0.44557, 0.661084, 0.446148, 1, 1, 1, 1, 1)

[sub_resource type="GDScript" id="GDScript_jmndr"]
script/source = "extends Area2D
@onready var swish = %net

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


func _on_body_entered(body):
	if (body.name == \"Basketball\"):
		swish.play()
		Scoreboard.score += 1
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8b3m0"]
size = Vector2(112.25, 14)

[sub_resource type="Environment" id="Environment_cvjnl"]
background_mode = 3
glow_enabled = true
glow_intensity = 1.0
glow_strength = 0.95
glow_blend_mode = 0
adjustment_enabled = true

[node name="Multiplayer" type="Node2D"]
script = ExtResource("1_ymen6")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(574.625, 327)
script = ExtResource("2_2by4i")

[node name="Floor" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
z_index = 5
position = Vector2(591, 705)
shape = SubResource("RectangleShape2D_4ojgr")

[node name="Sprite2D" type="Sprite2D" parent="Floor"]
z_index = 4
position = Vector2(576.5, 783.5)
scale = Vector2(1.50234, 0.212895)
texture = ExtResource("3_50f34")

[node name="Wall Left" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall Left"]
z_index = 5
position = Vector2(-374.001, 322.781)
rotation = 1.5708
shape = SubResource("RectangleShape2D_7hl0i")

[node name="Wall Right" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall Right"]
z_index = 5
position = Vector2(1527, 328.031)
rotation = 1.5708
shape = SubResource("RectangleShape2D_fvhs1")

[node name="Basketball" parent="." instance=ExtResource("4_h7b1f")]
z_index = 6
position = Vector2(608, 273)

[node name="Basketball2" type="RigidBody2D" parent="."]
z_index = 6
position = Vector2(899, 244)
physics_material_override = SubResource("PhysicsMaterial_uu6xs")
freeze = true
freeze_mode = 1
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("7_hrvcv")

[node name="Sprite2D" type="Sprite2D" parent="Basketball2"]
z_index = 1
material = SubResource("ShaderMaterial_8nfq6")
position = Vector2(51, 8)
scale = Vector2(0.15875, 0.16)
texture = SubResource("CompressedTexture2D_g73cu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Basketball2"]
visibility_layer = 1536
z_index = 8
position = Vector2(51, 8)
shape = SubResource("CircleShape2D_r0du0")

[node name="Timer" type="Timer" parent="Basketball2"]
one_shot = true

[node name="Marker2D" type="Marker2D" parent="Basketball2"]
position = Vector2(49, 29)

[node name="Control" parent="Basketball2" instance=ExtResource("12_oda38")]
z_index = 4
offset_left = 419.0
offset_top = 320.0
offset_right = 419.0
offset_bottom = 320.0
scale = Vector2(0.393069, 0.443055)

[node name="trail" parent="Basketball2" instance=ExtResource("5_5a3mv")]
unique_name_in_owner = true
width_curve = SubResource("Curve_8nfq6")
gradient = SubResource("Gradient_g73cu")
script = ExtResource("8_glukk")

[node name="Rim" parent="." instance=ExtResource("7_4ljhn")]
position = Vector2(474, 493)

[node name="bounce" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_a27ui")
volume_db = -7.924
pitch_scale = 0.92

[node name="RIM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_7ybie")
volume_db = -18.819
pitch_scale = 1.34

[node name="ambience" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_qvst4")
volume_db = -5.051

[node name="SoundTrigger" type="Area2D" parent="."]
script = SubResource("GDScript_jmndr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoundTrigger"]
position = Vector2(-227.125, 214)
shape = SubResource("RectangleShape2D_8b3m0")
one_way_collision_margin = 0.0

[node name="net" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("11_i45vu")
volume_db = -4.953
pitch_scale = 1.04

[node name="Timer" parent="." instance=ExtResource("14_bncsk")]
z_index = 5
position = Vector2(1278, -374)

[node name="Map Placeholder" type="Node2D" parent="."]
position = Vector2(-376, -217)

[node name="Scoreboard2" type="Node2D" parent="."]
position = Vector2(-292, -179)
script = ExtResource("13_kluxp")

[node name="WorldEnvironment" type="WorldEnvironment" parent="Scoreboard2"]
environment = SubResource("Environment_cvjnl")

[node name="Label" type="Label" parent="Scoreboard2"]
modulate = Color(2, 0.096, 0.319, 1)
z_index = 5
offset_right = 151.0
offset_bottom = 114.0
theme_override_fonts/font = ExtResource("13_2cpuc")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("14_kluxp")

[node name="ColorRect" type="ColorRect" parent="Scoreboard2"]
offset_right = 152.0
offset_bottom = 114.0
scale = Vector2(2.74108, 1)
color = Color(0, 0, 0, 1)

[node name="Label2" type="Label" parent="Scoreboard2"]
texture_filter = 1
offset_left = 135.0
offset_top = 24.0
offset_right = 175.0
offset_bottom = 57.0
scale = Vector2(3.02714, 2.34222)
theme_override_fonts/font = ExtResource("18_efcli")
theme_override_font_sizes/font_size = 30
text = "EF"

[node name="Scoreboard" type="Node2D" parent="."]
position = Vector2(1043, -204)
script = ExtResource("13_kluxp")

[node name="WorldEnvironment" type="WorldEnvironment" parent="Scoreboard"]
environment = SubResource("Environment_cvjnl")

[node name="Label" type="Label" parent="Scoreboard"]
modulate = Color(2, 0.096, 0.319, 1)
z_index = 5
offset_left = -2.0
offset_top = 28.0
offset_right = 149.0
offset_bottom = 142.0
theme_override_fonts/font = ExtResource("13_2cpuc")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("18_glukk")

[node name="ColorRect" type="ColorRect" parent="Scoreboard"]
offset_left = -2.0
offset_top = 26.0
offset_right = 150.0
offset_bottom = 140.0
scale = Vector2(2.85705, 1.08747)
color = Color(0, 0, 0, 1)

[node name="Label2" type="Label" parent="Scoreboard"]
texture_filter = 1
offset_left = 160.0
offset_top = 49.0
offset_right = 200.0
offset_bottom = 82.0
scale = Vector2(3.02714, 2.34222)
theme_override_fonts/font = ExtResource("18_efcli")
theme_override_font_sizes/font_size = 30

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 9

[node name="back button" parent="CanvasLayer" instance=ExtResource("20_att5n")]
z_index = 21
offset_left = 46.0
offset_top = 19.0
offset_right = 219.0
offset_bottom = 107.0
text = "Back"
script = ExtResource("21_axnjx")

[connection signal="body_entered" from="Basketball2" to="Basketball2" method="_on_body_entered"]
[connection signal="body_exited" from="Basketball2" to="Basketball2" method="_on_body_exited"]
[connection signal="timeout" from="Basketball2/Timer" to="Basketball2" method="_on_timer_timeout"]
[connection signal="body_entered" from="SoundTrigger" to="." method="_on_sound_trigger_body_entered"]
[connection signal="body_entered" from="SoundTrigger" to="Basketball" method="_on_sound_trigger_body_entered"]
[connection signal="body_entered" from="SoundTrigger" to="Basketball2" method="_on_sound_trigger_body_entered"]
